# batchcorder

./: .gitignore  .mypy-stubtest-allowlist  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  _typos.toml  batchcorder.pyi  conftest.py  mkdocs.yml  pyproject.toml  rust-toolchain.toml
.github/: release-drafter.yml
.github/workflows/: build-wheels.yaml  ci-docs.yaml  ci-lint.yaml  ci-lint.yml  ci-pre-release.yaml  ci-pre-release.yml  ci-release.yaml  ci-release.yml  ci-test.yaml  ci-test.yml
batchcorder/: __init__.py  __init__.pyi
docs/: index.md  requirements.txt
docs/explanation/: architecture.md  disk-spill-testing.md  gil-deadlock.md
docs/how-to/: cache-config.md  duckdb.md  eviction.md
docs/quarto/: _quarto.yml
docs/quarto/explanation/: architecture.qmd  gil-deadlock.qmd
docs/quarto/how-to/: cache-config.qmd  duckdb.qmd  eviction.qmd
docs/quarto/reference/: api-overview.qmd
docs/quarto/tutorials/: getting-started.qmd
docs/reference/: cached-dataset.md
docs/source/: api.rst  conf.py  index.rst
docs/tutorial/: getting-started.md
python/batchcorder/: __init__.py  __init__.pyi  _batchcorder.pyi
scripts/: build-docs.sh  build-release.sh
src/: cached_dataset.rs  lib.rs
tests/: test_as_record_batch_reader.py  test_cached_dataset.py  test_cast.py  test_docstrings.py  test_duckdb.py  test_duckdb_partial_consumption.py  test_duckdb_self_join.py  test_errors.py  test_performance.py  test_stream_cache.py
