[package]
name = "batchcorder"
version = "0.1.0"
edition = "2021"

[lib]
name = "_batchcorder"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
# Python bindings
pyo3 = { version = "0.28", features = [
  "macros",
  "extension-module",
  "abi3",
  "abi3-py311",
] }
pyo3-arrow = "0.17"
pyo3-stub-gen = { version = "0.19", default-features = false }

# Arrow types and IPC serialization
arrow-array = { version = "58", features = ["ffi"] }
arrow-schema = "58"
arrow-ipc = "58"

# Hybrid memory+disk cache (foyer serde feature auto-implements Code for Vec<u8>, u64, etc.)
foyer = { version = "0.22", features = ["serde"] }

# Async runtime required by foyer's async API
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "time"] }

# System information for detecting total physical RAM
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[lints.rust]
# Py_GIL_DISABLED is a cfg set by pyo3's build script to indicate free-threaded Python.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(Py_GIL_DISABLED)'] }
