[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "batchcorder"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["arro3-core>=0.4.0"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "batchcorder._batchcorder"

[dependency-groups]
dev = [
  "pyarrow>=14",
  "pytest>=8",
  "duckdb>=1.0",
  "ruff>=0.15.6",
  "pre-commit>=3.5.0",
  "pyright>=1.1",
  "griffe>=1.0",
  "mypy>=1.0",
  "ipython<9.12.0,>=8.19.0",
  "pytest-cov>=7.0.0",
  "coverage[toml]>=7.13.4",
]
docs = [
  "myst-parser>=5.0.0",
  "sphinx>=9.0.4",
  "sphinx-autoapi>=3.8.0",
  "sphinx-autodoc-typehints>=3.6.1",
  "sphinx-immaterial>=0.13.9",
]

[tool.codespell]
skip = "uv.lock,docs/requirements.txt"

[tool.ruff.lint]
extend-select = [
  "I",       # isort
  "ICN",     # import conventions
  "B",       # flake8-bugbear: mutable default args, exception chaining, etc.
  "C4",      # flake8-comprehensions: unnecessary list/dict/set comprehensions
  "FURB",    # refurb: modernise Python code
  "PLC0415", # import-outside-toplevel: imports must be at module level
  "SIM",
  "PT",
  "D",
  "RUF",
  "PYI",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"*.pyi" = ["PYI021", "D205", "D401"]

[tool.ruff.lint.isort]
known-first-party = ["batchcorder"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
lines-after-imports = 2
