[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "batchcorder"
requires-python = ">=3.11"
description = "A Rust-backed Python library for caching Arrow record-batch streams so they can be replayed multiple times"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Mesejo" }]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = ["arro3-core>=0.4.0"]

[project.urls]
Homepage = "https://github.com/mesejo/batchcorder"
Repository = "https://github.com/mesejo/batchcorder"
Documentation = "https://batchcorder.readthedocs.io"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "batchcorder._batchcorder"

[dependency-groups]
dev = [
  "maturin>=1.7,<2.0",
  "pyarrow>=14",
  "pytest>=8",
  "duckdb>=1.5",
  "ruff>=0.15.6",
  "pre-commit>=3.5.0",
  "pyright>=1.1",
  "griffe>=1.0",
  "mypy>=1.0",
  "ipython<9.12.0,>=8.19.0",
  "pytest-cov>=7.0.0",
  "coverage[toml]>=7.13.4",
  "sybil>=9.0",
]
docs = [
  "jupyter>=1.1.1",
  "myst-parser>=5.0.0",
  "nbformat>=5.10.4",
  "pandas>=3.0.1",
  "sphinx>=9.0.4",
  "sphinx-autoapi>=3.8.0",
  "sphinx-autodoc-typehints>=3.6.1",
  "sphinx-immaterial>=0.13.9",
]

[tool.codespell]
skip = "uv.lock,docs/requirements.txt"

[tool.ruff]
extend-include = ["*.md"]

[tool.ruff.lint]
ignore = [
  "D203", # conflicts with D211 (no-blank-line-before-class); D211 wins
  "D212", # conflicts with D213 (multi-line-summary-second-line); D213 wins
]
extend-select = [
  "I",       # isort
  "ICN",     # import conventions
  "B",       # flake8-bugbear: mutable default args, exception chaining, etc.
  "C4",      # flake8-comprehensions: unnecessary list/dict/set comprehensions
  "FURB",    # refurb: modernise Python code
  "PLC0415", # import-outside-toplevel: imports must be at module level
  "SIM",
  "PT",
  "D",
  "RUF",
  "PYI",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"conftest.py" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["batchcorder"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
lines-after-imports = 2

[tool.coverage.run]
source = ["batchcorder"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
